@@ -2,6 +2,7 @@
 -----
 1. Fix "TuneIn Options" when "More" selected from now-playing.
 2. Allow grid in more cases - e.g. "What was that tune?"
+3. Don't square off radio logos in queue and desktop bottom bar.
 
 0.9.0
 -----
